# course_management_toolkit

./: .buildinfo  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  action.sh  api.html  changelog.html  cli_reference.html  course.bat  course.py  course.sh  filter_test.txt  genindex.html  index.html  inspect_excel.py  inspect_excel_light.py  make.bat  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  search_print.py  searchindex.js  setup.py  usage.html
.doctrees/: api.doctree  changelog.doctree  cli_reference.doctree  environment.pickle  index.doctree  usage.doctree
_modules/: index.html
_sources/: changelog.rst.txt  index.rst.txt  usage.rst.txt
course_hoanganhduc/: __init__.py  __main__.py  c50_agent.py  c50_auth.py  c50_cli.py  c50_cli_human.py  c50_flags.py  c50_ops.py  c50_roster.py  c50_sync.py  canvas.py  canvas_admin.py  canvas_agent.py  canvas_announcements.py  canvas_assignments.py  canvas_auth.py  canvas_calendar.py  canvas_checks.py  canvas_grading.py  canvas_grading_schemes.py  canvas_invites.py  canvas_messages.py  canvas_pages.py  canvas_people.py  canvas_rubrics.py  canvas_submissions.py  canvas_sync.py  canvas_utils.py  canvas_weekly.py  classroom50.py  cli.py  config.py  core.py  course_agent_common.py  data.py  db_agent.py  gclass_agent.py  gclass_auth.py  gclass_grading.py  gclass_sheets.py  (+9 more)
docs/: api.rst  changelog.rst  cli_reference.rst  conf.py  index.rst  usage.rst
sample/: MAT-examples.xlsx  canvas_gradebook.csv  companies_sample.csv  config.sample.json  credentials.sample.json  index.md  (+4 more)
(+20 files in other folders)
